<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productthumbnail"
                android:layout_width="125dp"
                android:layout_height="170dp"
                android:background="#2d2d2d"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_game_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_game_price"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_game_count"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_game_description"
                android:textSize="18sp" />

            <NumberPicker
                android:id="@+id/game_number_picker"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="horizontal"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/button_buy"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>